impl/tests/errors/__snapshots__/test_array_with_type_annonation.ambr
# serializer version: 1
# name: test_only_variable_output
  '''
  
  [31m[E08] Error:[0m Expected array element to be type of [38;5;201mInt[0m but found [38;5;155mBool[0m, array elements need to be of same datatype
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:1:13[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m1 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m=[0m[38;5;249m<[0m[38;5;201mi[0m[38;5;201mn[0m[38;5;201mt[0m[38;5;249m>[0m[38;5;249m[[0m[38;5;155mt[0m[38;5;155mr[0m[38;5;155mu[0m[38;5;155me[0m[38;5;249m][0m
   [38;5;240m  │[0m        [38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m  [38;5;155m─[0m[38;5;155m─[0m[38;5;155m┬[0m[38;5;155m─[0m  
   [38;5;240m  │[0m         [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m Since this is of type [38;5;201mInt[0m...
   [38;5;240m  │[0m               [38;5;155m│[0m   
   [38;5;240m  │[0m               [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m ...expected this to be Int, but found [38;5;155mBool[0m
  [38;5;246m───╯[0m
  
  
  '''
# ---
